[gd_scene load_steps=2 format=3 uid="uid://c41pgp6oiwr5h"]

[ext_resource type="Script" path="res://scripts/dead_zone.gd" id="1_7ucdf"]

[node name="DeadZone" type="Area2D"]
modulate = Color(0.513726, 0.580392, 1, 1)
script = ExtResource("1_7ucdf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
